feat/fullstack/admin-dashboard (#218)
* fixed syntax issues

* fixed linting errors

* added meeting point functionality

* reworked the meeting point ux

* reworked admin dashboard

* fixed admin and map

* cleared up the map legend

* fixed up in type errors

* fixed dataseeder issues

* fixed temporarily issues with types in frontend

* fixed issue with userselect type error in frontend

* fixed frontend eslint

* fix: fix type error in MapPointTypeForm.vue

* updating impl in iconpicker